# communa

./: .gitignore  README.md  main.py  pyproject.toml
core/: settings.py  urls.py
membership/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
membership/migrations/: 0001_initial.py
news/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py
organization/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
organization/migrations/: 0001_initial.py
petitions/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py
