[project]
name = "communa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "markdown>=3.10.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.15",
]
